--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,99 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+.container {
+  max-width: 1170px;
+  margin: auto;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url("../fonts/OpenSans-Bold.woff2") format("woff2"), url("../fonts/OpenSans-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url("../fonts/OpenSans-Regular.woff2") format("woff2"), url("../fonts/OpenSans-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Font Awesome 5 Pro';
+  src: url("../fonts/fontAwesome/fa-regular-400.woff2") format("woff2"), url("../fonts/fontAwesome/fa-regular-400.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: auto;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.navbar-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 123px;
+}
+
+.navbar-logo {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  font-size: 25px;
+  color: #212121;
+  cursor: pointer;
+}
+
+.navbar__logo {
+  margin-right: 344px;
+}
+
+.navbar-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 655px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.navbar-menu__link {
+  text-decoration: none;
+  color: #212121;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+}
+
+.navbar__menu {
+  margin-right: 21px;
+}
+
+.navbar-search {
+  cursor: pointer;
+}
+
+.navbar-search__icon::before {
+  font-family: 'Font Awesome 5 Pro', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+  content: '\f002';
+  font-size: 19px;
+}
 /*# sourceMappingURL=style.css.map */
