Создан блок 'Hero', добавлены переменные цветов

--- a/sass/sections/_navbar.sass
+++ b/sass/sections/_navbar.sass
@@ -2,12 +2,12 @@
   &-wrap
     display: flex
     align-items: center
-    min-height: 123px
+    min-height: 120px
+    padding-bottom: 6px
 
   &-logo
     +bold
     font-size: 25px
-    color: #212121
     cursor: pointer
 
   &__logo
@@ -22,15 +22,15 @@
     margin: 0
 
     &__link
+      font-size: 20px
+      letter-spacing: 1px
       text-decoration: none
-      color: #212121
+      color: $light_Black
       +bold
 
   &__menu
     margin-right: 21px
 
-
-  
   &-search
     cursor: pointer
     &__icon::before
