--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,9 +4,15 @@
 // Настройки шрифтов
 @import 'fonts'
 
+// Настройки шрифтов
+@import 'colors'
+
 // Настройки интерфейса
 @import 'interface'
 
 // Шапка сайта 
 @import 'sections/navbar'
+
+// Содержание Главного экрана
+@import 'sections/hero'
 
