--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,20 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
+  font-weight: normal;
+  color: #212121;
+}
+
+.button {
+  border: 2px solid #212121;
+  cursor: pointer;
+  padding: 20px 15px;
+  letter-spacing: 1px;
+  font-size: 20px;
+  outline-color: transparent;
+  background-color: transparent;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 
 .navbar-wrap {
@@ -41,14 +55,14 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  min-height: 123px;
+  min-height: 120px;
+  padding-bottom: 6px;
 }
 
 .navbar-logo {
   font-family: 'Open Sans', sans-serif;
   font-weight: bold;
   font-size: 25px;
-  color: #212121;
   cursor: pointer;
 }
 
@@ -70,6 +84,8 @@ body {
 }
 
 .navbar-menu__link {
+  font-size: 20px;
+  letter-spacing: 1px;
   text-decoration: none;
   color: #212121;
   font-family: 'Open Sans', sans-serif;
@@ -96,5 +112,67 @@ body {
   line-height: 1;
   content: '\f002';
   font-size: 19px;
+}
+
+.hero {
+  background: #ffffff url("../img/hero-background.jpg") no-repeat center bottom;
+  background-size: cover;
+  padding-top: 172px;
+  padding-bottom: 257px;
+  color: #ffffff;
+}
+
+.hero-wrap {
+  text-align: center;
+}
+
+.hero-content__title {
+  margin: 0;
+  font-size: 60px;
+  letter-spacing: 4px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: normal;
+}
+
+.hero-content__description {
+  font-size: 22px;
+  letter-spacing: 1.1px;
+  margin-bottom: 111px;
+}
+
+.hero-content__button-first {
+  border: 2px solid #ffffff;
+  margin-right: 22px;
+  padding-left: 34px;
+  padding-right: 34px;
+}
+
+.hero-content__button-second {
+  border: 2px solid #00897b;
+  background-color: #00897b;
+  padding-right: 42px;
+  padding-left: 42px;
+}
+
+.hero-content__button-anchorLink::before {
+  font-family: 'Font Awesome 5 Pro', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+  content: '\f107';
+  font-size: 35px;
+  margin-top: 100px;
+  color: #ffffff;
+}
+
+.hero-content__buttons-wrap {
+  margin: 0 auto;
+  width: 469px;
+  height: 193px;
 }
 /*# sourceMappingURL=style.css.map */
