--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -1,2 +1,14 @@
 body
   +regular
+  color: $light_Black
+
+.button
+  border: 2px solid $light_Black
+  cursor: pointer
+  padding: 20px 15px
+  letter-spacing: 1px
+  font-size: 20px
+  outline-color: transparent
+  background-color: transparent
+  text-transform: uppercase
+  color: $white
