--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -4,4 +4,10 @@
 .container
   max-width: 1170px
   margin: auto
-  
+  @media (max-width: 1199px)
+    max-width: 960px
+  @media (max-width: 991px)
+    max-width: 750px
+  @media (max-width: 768px)
+    max-width: 100%
+    padding: 0 30px
