--- a/sass/sections/_hero.sass
+++ b/sass/sections/_hero.sass
@@ -4,26 +4,54 @@
   padding-top: 172px
   padding-bottom: 257px
   color: $white
+  @media (max-width: 768px)
+    padding-top: 132px
+  @media (max-width: 550px)
+    padding-top: 55px
+  @media (max-width: 320px)
+    padding-top: 35px
+
   &-wrap
    text-align: center
+
   &-content
+
     &__title
       margin: 0
       font-size: 60px
       letter-spacing: 4px
       +regular
+      @media (max-width: 550px)
+        font-size: 35px
     
     &__description
       font-size: 22px
       letter-spacing: 1.1px
       margin-bottom: 111px
+      @media (max-width: 550px)
+        margin-top: 20px
+        font-size: 18px
+        margin-bottom: 32px
+    
+    &__buttons-wrap
+      margin: 0 auto
+      width: 469px
+      height: 193px
+      @media (max-width: 550px)
+        display: flex
+        flex-direction: column
+        align-items: center
+        width: 225px
 
     &__button
       &-first
         border: 2px solid $white
-        margin-right:  22px
+        margin-right: 22px
         padding-left: 34px
         padding-right: 34px
+        @media (max-width: 550px)
+          margin-right: 0
+          margin-bottom: 20px
       
       &-second
         border: 2px solid $dark_Cyan
@@ -31,14 +59,15 @@
         padding-right: 42px
         padding-left: 42px
 
+      &-anchorLink
+        display: inline-block
+        margin-top: 100px
+        @media (max-width: 550px)
+          margin-top: 35px
+
       &-anchorLink::before
         +faRegular
         content: '\f107'
-        font-size: 35px
-        margin-top: 100px
+        font-size: 45px
         color: $white
         
-    &__buttons-wrap
-      margin: 0 auto
-      width: 469px
-      height: 193px
