--- a/sass/sections/_navbar.sass
+++ b/sass/sections/_navbar.sass
@@ -4,14 +4,22 @@
     align-items: center
     min-height: 120px
     padding-bottom: 6px
+    justify-content: space-between
+    background-color: #fff
+    @media (max-width: 768px)
+      min-height: 80px
+
+  &-wrap__menu
+    display: flex
+    align-items: center
+    @media (max-width: 768px)
+      width: 120px
+      justify-content: space-around
 
   &-logo
     +bold
     font-size: 25px
     cursor: pointer
-
-  &__logo
-    margin-right: 344px
 
   &-menu
     display: flex
@@ -20,13 +28,35 @@
     list-style: none
     padding: 0
     margin: 0
+    @media (max-width: 991px)
+      width: 500px
+    @media (max-width: 768px)
+      display: none
 
+    &__button
+      display: none
+      @media (max-width: 768px)
+        width: 50px
+        height: 50px
+        display: flex
+        align-items: center
+        flex-direction: column
+        justify-content: center
+        &-line
+          display: inline-block
+          height: 2px
+          width: 20px
+          background-color: $dark_Cyan
+          margin-top: 4px
+          
     &__link
       font-size: 20px
       letter-spacing: 1px
       text-decoration: none
       color: $light_Black
       +bold
+      @media (max-width: 991px)
+        font-size: 18px
 
   &__menu
     margin-right: 21px
