--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -12,3 +12,35 @@ body
   background-color: transparent
   text-transform: uppercase
   color: $white
+
+.preface
+  width: 620px
+  text-align: center
+  display: inline-block
+  font-size: 15px
+  @media (max-width: 679px)
+    width: 500px
+  @media (max-width: 539px)
+    width: 480px
+  @media (max-width: 499px)
+    width: 340px
+  @media (max-width: 410px)
+    width: 240px
+
+  &__wrap
+    text-align: center
+  
+  &__title
+    font-size: 30px
+    margin-top: 0
+    margin-bottom: 36px
+    +bold
+    @media (max-width: 991px)
+      font-size: 28px
+    @media (max-width: 499px)
+      font-size: 24px
+    @media (max-width: 410px)
+      font-size: 24px
+  
+  &__subtitle
+      margin: 0
