--- a/sass/sections/_hero.sass
+++ b/sass/sections/_hero.sass
@@ -4,6 +4,9 @@
   padding-top: 172px
   padding-bottom: 257px
   color: $white
+  @media (max-width: 1024px)
+    padding-top: 132px
+    padding-bottom: 172px
   @media (max-width: 768px)
     padding-top: 132px
   @media (max-width: 550px)
@@ -15,7 +18,6 @@
    text-align: center
 
   &-content
-
     &__title
       margin: 0
       font-size: 60px
