--- a/sass/sections/_hero.sass
+++ b/sass/sections/_hero.sass
@@ -62,6 +62,7 @@
         padding-left: 42px
 
       &-anchorLink
+        transition: 0.5s
         display: inline-block
         margin-top: 100px
         @media (max-width: 550px)
