--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -12,6 +12,7 @@ body
   background-color: transparent
   text-transform: uppercase
   color: $white
+  display: inline-block
 
 .preface
   text-align: center
