--- a/sass/sections/_ourServices.sass
+++ b/sass/sections/_ourServices.sass
@@ -4,6 +4,7 @@
   background-color: #e4fdf9
   @media (max-width: 768px)
     padding-top: 126px
+    padding-bottom: 80px
   @media (max-width: 426px)
     padding-top: 56px
     padding-bottom: 56px
