--- a/sass/style.sass
+++ b/sass/style.sass
@@ -21,3 +21,6 @@
 
 // Содержание блока "Наши услуги"
 @import 'sections/ourServices'
+
+// Содержание блока "Последние работы"
+@import 'sections/latestWorks'
