--- a/sass/style.sass
+++ b/sass/style.sass
@@ -24,3 +24,6 @@
 
 // Содержание блока "Последние работы"
 @import 'sections/latestWorks'
+
+// Содержание блока "Последние работы"
+@import 'sections/pricingPlan' 
