--- a/sass/style.sass
+++ b/sass/style.sass
@@ -27,3 +27,6 @@
 
 // Содержание блока "Последние работы"
 @import 'sections/pricingPlan' 
+
+// Содержание блока "Наша команда"
+@import 'sections/ourTeam'
