--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -24,6 +24,15 @@
   font-display: auto;
 }
 
+@font-face {
+  font-family: 'Font Awesome 5 Brands';
+  src :url('../fonts/fontAwesome/fa-brands-400.woff2') format('woff2'),
+      url('../fonts/fontAwesome/fa-brands-400.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: auto;
+}
+
 
 //Миксины
 @mixin bold {
@@ -38,6 +47,18 @@
 
 @mixin faRegular {
   font-family: 'Font Awesome 5 Pro', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+}
+
+@mixin faBrands {
+  font-family: 'Font Awesome 5 Brands', sans-serif;
   font-weight: 400;
   font-style: normal;
   -moz-osx-font-smoothing: grayscale;
