--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -4,6 +4,7 @@ body
 
 .button
   border: 2px solid $light_Black
+  box-sizing: border-box
   cursor: pointer
   padding: 20px 15px
   letter-spacing: 1px
