--- a/sass/sections/_ourTeam.sass
+++ b/sass/sections/_ourTeam.sass
@@ -32,6 +32,7 @@
         letter-spacing: 1px
         margin-top: 38px
         margin-bottom: 12px
+        font-size: 20px
 
       &-social
         display: flex
