--- a/sass/style.sass
+++ b/sass/style.sass
@@ -33,3 +33,9 @@
 
 // Содержание блока "Блог"
 @import 'sections/blog'
+
+// Содержание блока "Блог"
+@import 'sections/contactUs'
+
+// Содержание блока "Блог"
+@import 'sections/footer'
