--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ body {
 
 .button {
   border: 2px solid #212121;
+  text-decoration: none;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   cursor: pointer;
@@ -268,6 +269,7 @@ body {
 }
 
 .navbar-search {
+  padding: 15px;
   cursor: pointer;
 }
 
@@ -283,6 +285,65 @@ body {
   line-height: 1;
   content: '\f002';
   font-size: 19px;
+}
+
+.navbarMobile {
+  opacity: 0;
+  display: none;
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background-color: #00897b;
+  color: #ffffff;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.navbarMobile-f {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.navbarMobile__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 50%;
+  padding: 0;
+  margin: 0;
+}
+
+.navbarMobile__item {
+  list-style: none;
+}
+
+.navbarMobile__link {
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  letter-spacing: 1px;
+  color: #ffffff;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
 }
 
 .hero {
