--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -6,6 +6,7 @@ body
 
 .button
   border: 2px solid $light_Black
+  text-decoration: none
   box-sizing: border-box
   cursor: pointer
   padding: 20px 15px
