--- a/sass/sections/_navbar.sass
+++ b/sass/sections/_navbar.sass
@@ -57,17 +57,55 @@
       +bold
       @media (max-width: 991px)
         font-size: 18px
-
+      
   &__menu
     margin-right: 21px
 
   &-search
+    padding: 15px
     cursor: pointer
     &__icon::before
       +faRegular
       content: '\f002'
       font-size: 19px
-  
+    &__input
+      
+  &Mobile
+    opacity: 0
+    display: none
+    position: fixed
+    z-index: 2
+    width: 100%
+    height: 100%
+    background-color: $dark_Cyan
+    color: $white
+    justify-content: center
+    align-items: center
+    flex-direction: column
+    &-f
+      display: flex
+
+    &__list
+      display: flex
+      justify-content: space-around
+      align-items: center
+      flex-direction: column
+      height: 50%
+      padding: 0
+      margin: 0
+
+    &__item
+      list-style: none
+
+    &__link
+      text-decoration: none
+      color: white
+      font-size: 20px
+      letter-spacing: 1px
+      color: $white
+      +bold
+
+
 
   
   
